Added tabbed content to technology page

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -278,5 +278,5 @@ const currentPath = pathname.slice(1)
 </style>
 
 <script>
-    import '../scripts/navigation.ts'
+    import '@/scripts/navigation.ts'
 </script>
