--- a/src/components/Tabs/TabsList.astro
+++ b/src/components/Tabs/TabsList.astro
@@ -14,21 +14,23 @@
         align-self: self-end;
         z-index: 1;
 
-        &::after {
-            content: '';
-            position: absolute;
-            inset: auto 0 0;
-            block-size: 3px;
-            background-color: hsl(var(--clr-white));
+        :global([tabs-animated-indicator]) & {
+            &::after {
+                content: '';
+                position: absolute;
+                inset: auto 0 0;
+                block-size: 3px;
+                background-color: hsl(var(--clr-white));
 
-            // the 0.09 is a magic number to set the initial width of the first item
-            // it's calculated with js onload.
-            scale: var(--_width, 0.09) 1;
-            translate: var(--_left, 0) 0;
-            transform-origin: left;
-            transition:
-                scale var(--_duration),
-                translate var(--_duration);
+                // the 0.09 is a magic number to set the initial width of the first item
+                // it's calculated with js onload.
+                scale: var(--_width, 0.09) 1;
+                translate: var(--_left, 0) 0;
+                transform-origin: left;
+                transition:
+                    scale var(--_duration),
+                    translate var(--_duration);
+            }
         }
 
         @media (--until-tablet-l) {
