--- a/src/components/Tabs/TabsContent.astro
+++ b/src/components/Tabs/TabsContent.astro
@@ -87,6 +87,8 @@ const { name, description, distance, travel, image } = panelContent.data
 
             > img {
                 max-inline-size: 27.8125rem;
+                animation: var(--animation-spin) forwards;
+                animation-duration: 240s;
             }
         }
 
