--- a/src/scss/utilities/_typography.scss
+++ b/src/scss/utilities/_typography.scss
@@ -29,15 +29,15 @@
   }
 
   .letter-spacing-1 {
-    letter-spacing: 4.75px;
+    letter-spacing: var(--ls-1);
   }
 
   .letter-spacing-2 {
-    letter-spacing: 2.7px;
+    letter-spacing: var(--ls-2);
   }
 
   .letter-spacing-3 {
-    letter-spacing: 2.35px;
+    letter-spacing: var(--ls-3);
   }
 
   .uppercase {
