--- a/src/components/CrewSlider.astro
+++ b/src/components/CrewSlider.astro
@@ -8,7 +8,7 @@ import { Image } from 'astro:assets'
             <div class="crew-info flow">
                 <h2 class="fs-fluid-700 ff-serif uppercase grid">
                     <span class="fs-fluid-600 text-white-50">Commander</span>
-                     Douglas Hurley
+                    Douglas Hurley
                 </h2>
 
                 <p class="ff-sans-normal text-accent">
@@ -32,7 +32,7 @@ import { Image } from 'astro:assets'
             <div class="crew-info flow">
                 <h2 class="fs-fluid-700 ff-serif uppercase grid">
                     <span class="fs-fluid-600 text-white-50">Mission Specialist</span>
-                     Mark Shuttleworth
+                    Mark Shuttleworth
                 </h2>
 
                 <p class="ff-sans-normal text-accent">
@@ -56,7 +56,7 @@ import { Image } from 'astro:assets'
             <div class="crew-info flow">
                 <h2 class="fs-fluid-700 ff-serif uppercase grid">
                     <span class="fs-fluid-600 text-white-50">Pilot</span>
-                     Victor Glover
+                    Victor Glover
                 </h2>
 
                 <p class="ff-sans-normal text-accent">
@@ -80,7 +80,7 @@ import { Image } from 'astro:assets'
             <div class="crew-info flow">
                 <h2 class="fs-fluid-700 ff-serif uppercase grid">
                     <span class="fs-fluid-600 text-white-50">Flight Engineer</span>
-                     Anousheh Ansari
+                    Anousheh Ansari
                 </h2>
 
                 <p class="ff-sans-normal text-accent">
@@ -102,7 +102,7 @@ import { Image } from 'astro:assets'
         </div>
     </div>
 
-    <nav class="carousel--pagination dot-indicators flex" role="tablist">
+    <div class="carousel--pagination dot-indicators flex" role="tablist">
         <button
             type="button"
             role="tab"
@@ -139,7 +139,7 @@ import { Image } from 'astro:assets'
             aria-posinset="4"
             aria-selected="false"
             tabindex="-1"></button>
-    </nav>
+    </div>
 </div>
 
 <style lang="scss">
