added view transition to css for now only chrome 126 and higher

--- a/src/scss/base/_page.scss
+++ b/src/scss/base/_page.scss
@@ -1,5 +1,13 @@
 @use '../functions/fluid' as *;
 
+// New way to define view transitions the default behavior is a fade transition
+// between views
+/* stylelint-disable-next-line scss/at-rule-no-unknown */
+@view-transition {
+  /* stylelint-disable-next-line property-no-unknown */
+  navigation: auto;
+}
+
 @layer base {
   html {
     @media (width >= 125em) {
