--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import '@fontsource/barlow-condensed/latin-400.css'
 import '@fontsource/barlow-condensed/latin-700.css'
 import '@fontsource/bellefair/latin.css'
 
-// import { ViewTransitions } from 'astro:transitions'
+import { ViewTransitions } from 'astro:transitions'
 
 interface Props {
     title?: string
@@ -29,7 +29,7 @@ const {
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
-        <!-- <ViewTransitions /> -->
+        <ViewTransitions />
     </head>
     <body class=`${className}`>
         <slot />
