Replace Icon component with SVG logo in Header and SimpleHeader components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,12 @@
 ---
-import { Icon } from 'astro-icon/components'
+import Logo from '@/icons/logo.svg'
 import Navigation from './Navigation.astro'
 ---
 
 <header>
     <div class="logo">
         <a href="/">
-            <Icon name="logo" size={48} />
+            <Logo width={48} height={48} aria-hidden />
             <span class="sr-only">Back to homepage</span>
         </a>
     </div>
