removed unused packages and upgrade packages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Layout from '@layouts/Layout.astro'
         </div>
 
         <div>
-            <Cta url="/destination" label="explore" />
+            <Cta url="/destination/" label="explore" />
         </div>
     </Main>
 </Layout>
